[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cm-csv-validator"
version = "0.1.0"
description = "Standalone CSV validator for UiPath Communications Mining upload readiness."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
cm-csv-validator = "cm_csv_validator.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
